Closed
Bug 256618
Opened 21 years ago
Closed 21 years ago
right click menus not working
Categories
(Core :: DOM: Events, defect)
Core
DOM: Events
Tracking
()
VERIFIED
FIXED
People
(Reporter: svdmade, Assigned: neil)
References
Details
(Keywords: regression)
Attachments
(1 file)
|
883 bytes,
patch
|
bryner
:
review+
jst
:
superreview+
|
Details | Diff | Splinter Review |
In mozilla nightly build 20040823 in the mail application I can not open a menu
by right clicking with the mouse.
Expected results
1 Open link in new tab or window on clicking on a link
2 On text copy paste etc etc
actual result no menu shows in mail and news
Updated•21 years ago
|
Severity: normal → major
Flags: blocking1.8a4?
Keywords: regression
OS: Linux → All
Hardware: PC → All
Summary: right click menus now working → right click menus not working
| Assignee | ||
Comment 1•21 years ago
|
||
The chrome event handler for whatever reason needs to fix context menu events.
If the event already has a DOM event (perhaps it got retargetted during the
capturing phase, because it was dispatched to a tabbrowser), then all passes off
well and good. However, for explicit browser elements, no such event exists.
Unfortunately the event listener manager then creates a DOM UI event :-(
Component: Mail Window Front End → DOM: Events
Product: MailNews → Browser
| Assignee | ||
Comment 2•21 years ago
|
||
Assignee: sspitzer → neil.parkwaycc.co.uk
Status: NEW → ASSIGNED
| Assignee | ||
Updated•21 years ago
|
Attachment #156843 -
Flags: superreview?(jst)
Attachment #156843 -
Flags: review?(bryner)
Comment 3•21 years ago
|
||
Comment on attachment 156843 [details] [diff] [review]
Proposed patch
sr=jst
Attachment #156843 -
Flags: superreview?(jst) → superreview+
Comment 4•21 years ago
|
||
*** Bug 256780 has been marked as a duplicate of this bug. ***
| Reporter | ||
Comment 5•21 years ago
|
||
Mayby a stupid question but when will the patch be included in the nightly build
? As the patch looks to be included in CVS.
Comment 6•21 years ago
|
||
*** Bug 256893 has been marked as a duplicate of this bug. ***
*** Bug 256892 has been marked as a duplicate of this bug. ***
Updated•21 years ago
|
Attachment #156843 -
Flags: review?(bryner) → review+
| Assignee | ||
Comment 8•21 years ago
|
||
Fix checked in.
Status: ASSIGNED → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
| Reporter | ||
Comment 9•21 years ago
|
||
Problem verified as solved on build 20040826
Thanks
Comment 10•21 years ago
|
||
*** Bug 256924 has been marked as a duplicate of this bug. ***
Updated•21 years ago
|
Flags: blocking1.8a4?
Comment 12•21 years ago
|
||
*** Bug 256916 has been marked as a duplicate of this bug. ***
You need to log in
before you can comment on or make changes to this bug.
Description
•