Bug 256618 Some context menus not appearing because UIEvents were being created instead of MouseEvents r=bryner sr=jst